@@ -1,352 +1,0 @@
-# depslib dependency file v1.0
-1341344822 source:/home/pierrick/Projects/zipdirfs/maintest.cpp
-	"zipdirfs/NameSearchTree.h"
-	"zipdirfs/SystemDirectoryFactory.h"
-	"zipdirfs/ZipFile.h"
-	"zipdirfs/ZipIterator.h"
-	"zipdirfs/ZipWalker.h"
-	<string>
-	<iostream>
-	<dirent.h>
-	<stdio.h>
-	<stddef.h>
-	<unistd.h>
-	<zip.h>
-	<fcntl.h>
-
-1341102371 /home/pierrick/Projects/zipdirfs/include/zipdirfs/NameSearchTree.h
-	"zipdirfs/NameSearchTreeNodes.h"
-	"zipdirfs/NameSearchWalker.h"
-	"zipdirfs/NotFoundException.h"
-	"zipdirfs/stream_indent.h"
-	<string.h>
-	<ostream>
-
-1341078605 /home/pierrick/Projects/zipdirfs/include/zipdirfs/NotFoundException.h
-	<exception>
-
-1341078605 /home/pierrick/Projects/zipdirfs/include/zipdirfs/stream_indent.h
-	<ostream>
-
-1341339129 source:/home/pierrick/Projects/zipdirfs/src/zipdirfs/NotFoundException.cpp
-	"zipdirfs/NotFoundException.h"
-
-1341339129 source:/home/pierrick/Projects/zipdirfs/src/zipdirfs/stream_indent.cpp
-	"zipdirfs/stream_indent.h"
-	<string>
-
-1341078605 /home/pierrick/Projects/zipdirfs/include/zipdirfs/NameSearchTreeNodes.h
-	"zipdirfs/stream_indent.h"
-	<ostream>
-
-1341078605 /home/pierrick/Projects/zipdirfs/include/zipdirfs/NameSearchWalker.h
-	"zipdirfs/NameSearchTreeNodes.h"
-	<iterator>
-	<deque>
-
-1341427317 source:/home/pierrick/Projects/zipdirfs/main.cpp
-	"zipdirfs/entry_definitions.h"
-	<fusekit/daemon.h>
-	<vector>
-	<iostream>
-	<algorithm>
-	<string.h>
-
-1341162201 /home/pierrick/Projects/zipdirfs/include/zipdirfs/SystemDirectoryFactory.h
-	"zipdirfs/NameSearchTree.h"
-	"zipdirfs/EntryFactory.h"
-	<fusekit/entry.h>
-	<fusekit/no_lock.h>
-	<time.h>
-	<sys/stat.h>
-	<stdlib.h>
-	<unistd.h>
-	<dirent.h>
-	<stdio.h>
-	<stddef.h>
-	<iostream>
-
-1341155336 /home/pierrick/Projects/zipdirfs/include/zipdirfs/DirectoryNode.h
-	<fusekit/entry.h>
-
-1341155336 /home/pierrick/Projects/zipdirfs/include/zipdirfs/SystemDirectoryTime.h
-	<time.h>
-
-1341155336 /home/pierrick/Projects/zipdirfs/include/zipdirfs/DefaultPermission.h
-	<asm-generic/errno-base.h>
-	<sys/types.h>
-
-1341096345 /home/pierrick/Projects/zipdirfs/include/zipdirfs/debug_daemon.h
-	<unistd.h>
-	<sys/types.h>
-	<fuse.h>
-	<vector>
-	<sstream>
-	<iostream>
-	<fusekit/entry.h>
-	<fusekit/file_handle.h>
-	<fusekit/no_entry.h>
-	<fusekit/no_lock.h>
-	<fusekit/default_directory.h>
-	<fusekit/path.h>
-
-1341339129 source:/home/pierrick/Projects/zipdirfs/src/zipdirfs/EntryFactory.cpp
-	"zipdirfs/EntryFactory.h"
-	"zipdirfs/entry_definitions.h"
-	<sys/stat.h>
-	<unistd.h>
-	<stdio.h>
-	<zip.h>
-
-1341152261 /home/pierrick/Projects/zipdirfs/include/zipdirfs/EntryFactory.h
-	<fusekit/entry.h>
-	<dirent.h>
-	<string>
-
-1341269013 /home/pierrick/Projects/zipdirfs/include/zipdirfs/entry_definitions.h
-	"zipdirfs/DefaultPermission.h"
-	"zipdirfs/SystemDirectoryFactory.h"
-	"zipdirfs/SystemDirectoryTime.h"
-	"zipdirfs/DirectoryNode.h"
-	"zipdirfs/LinkFactory.h"
-	"zipdirfs/LinkTime.h"
-	"zipdirfs/LinkBuffer.h"
-	"zipdirfs/LinkNode.h"
-	"zipdirfs/ZipRootFactory.h"
-	"zipdirfs/ZipDirectoryFactory.h"
-	"zipdirfs/ZipTime.h"
-	"zipdirfs/ZipFileBuffer.h"
-	<fusekit/basic_entry.h>
-	<fusekit/basic_directory.h>
-	<fusekit/basic_file.h>
-	<fusekit/no_buffer.h>
-
-1341155597 /home/pierrick/Projects/zipdirfs/include/zipdirfs/LinkFactory.h
-	<fusekit/no_lock.h>
-	<string>
-
-1341150995 /home/pierrick/Projects/zipdirfs/include/zipdirfs/LinkTime.h
-	<time.h>
-
-1341155597 /home/pierrick/Projects/zipdirfs/include/zipdirfs/LinkNode.h
-	<fusekit/entry.h>
-	<string.h>
-
-1341155597 source:/home/pierrick/Projects/zipdirfs/src/LinkTime.cpp
-	"zipdirfs/LinkTime.h"
-
-1341154271 /home/pierrick/Projects/zipdirfs/include/zipdirfs/LinkBuffer.h
-	<fusekit/entry.h>
-
-1341268365 /home/pierrick/Projects/zipdirfs/include/zipdirfs/ZipRootFactory.h
-	"zipdirfs/NameSearchTree.h"
-	"zipdirfs/ZipFile.h"
-	<fusekit/entry.h>
-	<fusekit/no_lock.h>
-	<time.h>
-
-1341429869 source:/home/pierrick/Projects/zipdirfs/src/zipdirfs/ZipEntry.cpp
-	"zipdirfs/ZipEntry.h"
-	"zipdirfs/ZipFile.h"
-	"zipdirfs/ZipEntryFileInfo.h"
-	<zip.h>
-	<asm-generic/errno-base.h>
-	<iostream>
-
-1341171459 /home/pierrick/Projects/zipdirfs/include/zipdirfs/ZipEntry.h
-	<time.h>
-	<stdint.h>
-
-1341350852 source:/home/pierrick/Projects/zipdirfs/src/zipdirfs/ZipFile.cpp
-	"zipdirfs/ZipFile.h"
-	"zipdirfs/ZipEntry.h"
-	<iostream>
-	<fcntl.h>
-	<zip.h>
-	<errno.h>
-
-1341171459 /home/pierrick/Projects/zipdirfs/include/zipdirfs/ZipFile.h
-	"zipdirfs/ZipIterator.h"
-	<string>
-
-1341171459 /home/pierrick/Projects/zipdirfs/include/zipdirfs/ZipIterator.h
-	<stdint.h>
-	<iterator>
-	<time.h>
-	<string>
-
-1341350852 source:/home/pierrick/Projects/zipdirfs/src/zipdirfs/ZipIterator.cpp
-	"zipdirfs/ZipIterator.h"
-	"zipdirfs/ZipFile.h"
-	<zip.h>
-
-1341268396 /home/pierrick/Projects/zipdirfs/include/zipdirfs/ZipDirectoryFactory.h
-	"zipdirfs/ZipWalker.h"
-	"zipdirfs/ZipFile.h"
-	<fusekit/no_lock.h>
-	<fusekit/entry.h>
-	<string>
-
-1341268663 /home/pierrick/Projects/zipdirfs/include/zipdirfs/ZipWalker.h
-	"zipdirfs/ZipIterator.h"
-	<string>
-	<iterator>
-	<utility>
-
-1341267871 /home/pierrick/Projects/zipdirfs/include/zipdirfs/ZipTime.h
-	<time.h>
-
-1341268882 /home/pierrick/Projects/zipdirfs/include/zipdirfs/ZipFileBuffer.h
-	"zipdirfs/ZipEntry.h"
-	<stdint.h>
-	<asm-generic/errno-base.h>
-	<fuse.h>
-	<time.h>
-
-1341339129 /home/pierrick/Projects/zipdirfs/include//zipdirfs/entry_definitions.h
-	"zipdirfs/DefaultPermission.h"
-	"zipdirfs/SystemDirectoryFactory.h"
-	"zipdirfs/SystemDirectoryTime.h"
-	"zipdirfs/DirectoryNode.h"
-	"zipdirfs/LinkFactory.h"
-	"zipdirfs/LinkTime.h"
-	"zipdirfs/LinkBuffer.h"
-	"zipdirfs/LinkNode.h"
-	"zipdirfs/ZipRootFactory.h"
-	"zipdirfs/ZipDirectoryFactory.h"
-	"zipdirfs/ZipTime.h"
-	"zipdirfs/ZipFileBuffer.h"
-	<fusekit/basic_entry.h>
-	<fusekit/basic_directory.h>
-	<fusekit/basic_file.h>
-	<fusekit/no_buffer.h>
-
-1341339129 /home/pierrick/Projects/zipdirfs/include//zipdirfs/DefaultPermission.h
-	<asm-generic/errno-base.h>
-	<sys/types.h>
-
-1341339129 /home/pierrick/Projects/zipdirfs/include//zipdirfs/SystemDirectoryFactory.h
-	"zipdirfs/NameSearchTree.h"
-	"zipdirfs/EntryFactory.h"
-	<fusekit/entry.h>
-	<fusekit/no_lock.h>
-	<time.h>
-	<sys/stat.h>
-	<stdlib.h>
-	<unistd.h>
-	<dirent.h>
-	<stdio.h>
-	<stddef.h>
-	<iostream>
-
-1341339129 /home/pierrick/Projects/zipdirfs/include//zipdirfs/NameSearchTree.h
-	"zipdirfs/NameSearchTreeNodes.h"
-	"zipdirfs/NameSearchWalker.h"
-	"zipdirfs/NotFoundException.h"
-	"zipdirfs/stream_indent.h"
-	<string.h>
-	<ostream>
-
-1341339129 /home/pierrick/Projects/zipdirfs/include//zipdirfs/NameSearchTreeNodes.h
-	"zipdirfs/stream_indent.h"
-	<ostream>
-
-1341339129 /home/pierrick/Projects/zipdirfs/include//zipdirfs/stream_indent.h
-	<ostream>
-
-1341339129 /home/pierrick/Projects/zipdirfs/include//zipdirfs/NameSearchWalker.h
-	"zipdirfs/NameSearchTreeNodes.h"
-	<iterator>
-	<deque>
-
-1341339129 /home/pierrick/Projects/zipdirfs/include//zipdirfs/NotFoundException.h
-	<exception>
-
-1341336912 /home/pierrick/Projects/zipdirfs/include//zipdirfs/EntryFactory.h
-	<fusekit/entry.h>
-	<dirent.h>
-	<string>
-
-1341339129 /home/pierrick/Projects/zipdirfs/include//zipdirfs/SystemDirectoryTime.h
-	<time.h>
-
-1341339129 /home/pierrick/Projects/zipdirfs/include//zipdirfs/DirectoryNode.h
-	<fusekit/entry.h>
-
-1341339129 /home/pierrick/Projects/zipdirfs/include//zipdirfs/LinkFactory.h
-	<fusekit/no_lock.h>
-	<string>
-
-1341337039 /home/pierrick/Projects/zipdirfs/include//zipdirfs/LinkTime.h
-	<time.h>
-
-1341336954 /home/pierrick/Projects/zipdirfs/include//zipdirfs/LinkBuffer.h
-	<fusekit/entry.h>
-
-1341339129 /home/pierrick/Projects/zipdirfs/include//zipdirfs/LinkNode.h
-	<fusekit/entry.h>
-	<string.h>
-
-1341430279 /home/pierrick/Projects/zipdirfs/include//zipdirfs/ZipRootFactory.h
-	"zipdirfs/NameSearchTree.h"
-	"zipdirfs/ZipWalker.h"
-	"zipdirfs/ZipFile.h"
-	<fusekit/entry.h>
-	<fusekit/no_lock.h>
-	<time.h>
-
-1341350852 /home/pierrick/Projects/zipdirfs/include//zipdirfs/ZipFile.h
-	"zipdirfs/ZipIterator.h"
-	<string>
-
-1341339129 /home/pierrick/Projects/zipdirfs/include//zipdirfs/ZipIterator.h
-	"zipdirfs/ZipEntryFileInfo.h"
-	<stdint.h>
-	<iterator>
-	<string>
-
-1341350852 /home/pierrick/Projects/zipdirfs/include//zipdirfs/ZipDirectoryFactory.h
-	"zipdirfs/ZipWalker.h"
-	"zipdirfs/ZipFile.h"
-	<fusekit/no_lock.h>
-	<fusekit/entry.h>
-	<string>
-
-1341339129 /home/pierrick/Projects/zipdirfs/include//zipdirfs/ZipWalker.h
-	"zipdirfs/ZipIterator.h"
-	<string>
-	<iterator>
-	<utility>
-
-1341339129 /home/pierrick/Projects/zipdirfs/include//zipdirfs/ZipTime.h
-	<time.h>
-
-1341425775 /home/pierrick/Projects/zipdirfs/include//zipdirfs/ZipFileBuffer.h
-	"zipdirfs/ZipEntry.h"
-	<stdint.h>
-	<asm-generic/errno-base.h>
-	<fuse.h>
-	<time.h>
-
-1341425348 /home/pierrick/Projects/zipdirfs/include//zipdirfs/ZipEntry.h
-	<sys/types.h>
-	<time.h>
-	<stdint.h>
-
-1341339129 source:/home/pierrick/Projects/zipdirfs/src/zipdirfs/LinkTime.cpp
-	"zipdirfs/LinkTime.h"
-
-1341339129 /home/pierrick/Projects/zipdirfs/include//zipdirfs/ZipEntryFileInfo.h
-	<stdint.h>
-	<string>
-	<time.h>
-
-1341339129 source:/home/pierrick/Projects/zipdirfs/src/zipdirfs/ZipEntryFileInfo.cpp
-	"zipdirfs/ZipEntryFileInfo.h"
-
-1341350852 source:/home/pierrick/Projects/zipdirfs/src/zipdirfs/ZipWalker.cpp
-	"zipdirfs/ZipWalker.h"
-	"zipdirfs/ZipFile.h"
-	"zipdirfs/entry_definitions.h"
-	<string.h>
-
